--- a/CSS/style.css
+++ b/CSS/style.css
@@ -9,13 +9,20 @@ h1 {
 
       margin: 50px auto 0 auto;
       font-family: 'Sacramento', cursive;
+      font-size: 562.5%;
+      color: #66BFBF;
+      line-height: 2;
 }
 h2 {
   font-family: 'Montserrat', sans-serif;
+  font-size: 2.5rem;
+  color: #66BFBF;
+  font-weight: normal;
 }
 
 h3 {
   font-family: 'Montserrat', sans-serif;
+  color: #119993;
 }
 .top-container {
   background-color: #E4F9F5;
@@ -24,12 +31,11 @@ h3 {
 }
 
 .middle-containe {
-    margin: 100px 0;
+
 }
 
 .bottom-container {
-  background-color: #66BFBF;
-  padding: 50px 0 20px;
+
 }
 .cloud-top {
   position: absolute;
